--- a/cms/package.json
+++ b/cms/package.json
@@ -8,6 +8,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "echarts": "^5.3.3",
     "element-plus": "^2.2.6",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
