--- a/cms/package.json
+++ b/cms/package.json
@@ -12,7 +12,8 @@
     "element-plus": "^2.2.6",
     "nprogress": "^0.2.0",
     "vue": "^3.2.25",
-    "vue-router": "^4.0.16"
+    "vue-router": "^4.0.16",
+    "vuex": "^4.0.2"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
